--- a/src/components/top/style.scss
+++ b/src/components/top/style.scss
@@ -11,6 +11,68 @@
     .title{
         font-size: 20px;
         color:#fff;
+        margin-top: 6px;
 
     }
+
+    .weather-container{
+        margin-top: 1.2em;
+        color:#fff;
+        display: flex;
+        flex-direction: column;
+
+
+        .header{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+           
+            font-size: 13px;
+
+        }
+
+        .inner-container{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            color:#fff;
+            margin: 10px 0;
+            align-items: center;
+
+            .current-weather{
+                height: fit-content;
+                font-size: 28px;
+            }
+            
+            .image{
+                width: 3em;
+                height: 3em;
+                img{
+                    width: 100%;
+                    height: 100%;
+
+                }
+            }
+             
+            
+
+        }
+
+        .footer{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            font-size: 13px;
+
+        }
+    }
+}
+
+.btn-select-location{
+    background-color: #49dcc2;
+    font-size: 10px;
+    font-family: Roboto,sans-serif;
+    border-radius: 2px;
+    color: #222;
+
 }
