--- a/src/components/bottom/style.scss
+++ b/src/components/bottom/style.scss
@@ -3,44 +3,42 @@
     height: 100%;
     background: linear-gradient(180deg,#6abeca 0%, rgba(58,98,104,0.57)100%), url("../../resources/sunnyWeather.jpg") center no-repeat;
     background-size: cover;
-
     display: flex;
     justify-content: center;
-
-    .inner-container{
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items:center; 
-    } 
-}
-
-forecastday-container{
+    .inner-container {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  
+  .forecastday-container {
     width: 8em;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-   
-   
-    .image{
-        width: 3em;
-        height: 3em;
-        img{
-            width: 100%;
-            height: 100%;
-        }
+  
+    .image {
+      width: 3em;
+      height: 3em;
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
+  
     .text {
-        font-size: 14px;
-        color: #fff;
+      font-size: 14px;
+      color: #fff;
     }
-
+  
     .muted-text {
-        font-size: 12px;
-        color:#fff;
+      font-size: 10px;
+      color: #fff;
     }
-}
+  }
